[tool.poetry]
name = "scriptflow"
version = "0.2.6"
description = "Like a makefile but in python, a stripped-down system of Airflow or Luigi"
authors = ["Thibaut Lamadon <thibaut.lamadon@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tlamadon/scriptflow"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^11.0.0"
toml = "^0.10.2"
click = "^8.0.3"
asyncssh = "^2.9.0"
requests = "^2.27.1"
tinydb = "^4.7.0"
pytest = "^7.1.1"
omegaconf = "^2.1.1"

[tool.poetry.dev-dependencies]
coverage = "^6.3.3"
asynctest = "^0.13.0"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"

[tool.poetry.scripts]
scriptflow = 'scriptflow.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
dask = ["dask-jobqueue"]

[tool.pytest.ini_options]
asyncio_mode="strict"
testpaths = [
    "tests"
]